Bug 246251 - [IFC][Integration] Fix editing/inserting/insert-br-at-tabspan-002.html
Summary: [IFC][Integration] Fix editing/inserting/insert-br-at-tabspan-002.html
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-10-08 15:52 PDT by zalan
Modified: 2022-10-09 07:14 PDT (History)
7 users (show)

See Also:


Attachments
Patch (1.57 KB, patch)
2022-10-08 15:58 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2022-10-08 15:52:42 PDT
ssia
Comment 1 zalan 2022-10-08 15:58:53 PDT
Created attachment 462887 [details]
Patch
Comment 2 EWS 2022-10-09 07:13:20 PDT
Committed 255326@main (5e46888e0ba5): <https://commits.webkit.org/255326@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 462887 [details].
Comment 3 Radar WebKit Bug Importer 2022-10-09 07:14:17 PDT
<rdar://problem/100947573>