[IFC][Integration] Fix editing/inserting/insert-br-at-tabspan-002.html https://bugs.webkit.org/show_bug.cgi?id=246251

Reviewed by Antti Koivisto.

Both isEndOfParagraph() and lineBreakExistsAtVisiblePosition() walk the inline tree to find certain positions. However in some cases when we call positionOutsideTabSpan, it damages the inline content by mutating the DOM (render) tree through splitTextNodeContainingElement.
This patch ensures that we always have up-to-date inline tree here.

* Source/WebCore/editing/InsertLineBreakCommand.cpp:
(WebCore::InsertLineBreakCommand::doApply):

Canonical link: https://commits.webkit.org/255326@main